--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 <div class="row">
 <div class="col-6>
-<img scr="2.jpg" class="thumbnail" style="height:100px , width:100px>
+<img scr="2.jpg" class="thumbnail" style="height:100px; width:100px;"/>
 <button class="btn btn-primary" type="button> like </button>
   </div>
 </div>  
