--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 <div class="row">
 <div class="col-6>
-<img scr="3.jpg" class="img-thumbnail" style="height:500px; width:400px;"/>
+<img src="3.jpg" class="img-thumbnail" style="height:500px; width:400px;"/>
 <button class="btn btn-primary" type="button> like </button>
   </div>
 </div>  
