--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="row">
 <div class="col-6>
 <img src="3.jpg" class="img-thumbnail" style="height:500px; width:400px;"/>
-<button class="btn btn-primary" type="button> like </button>
+<button class="btn btn-primary" type="button"> like </button>
   </div>
 </div>  
 </div>
