--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 <div class="row">
 <div class="col-6>
-<img src="2.jpg" class="img-thumbnail" style="height:200px; width:200px;"/>
+<img src="Screenshot_20240425_163355_Call of Duty.jpg" class="img-thumbnail" style="height:200px; width:200px;"/>
 <button class="btn btn-primary" type="button"> like </button>
   </div>
 </div>  
