--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <title>My Home Page</title>
-
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Aljon Sarmiento</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-<div class="row">
-<div class="col-6>
-<img src="Screenshot_20240425_163355_Call of Duty.jpg" class="img-thumbnail" style="height:200px; width:200px;"/>
-<button class="btn btn-primary" type="button"> like </button>
+  <div class="container"> 
+    <div class="row">
+      <div class="col-6">
+          <h1>Beluga</h1>
+  
+          <img src="2.jpg" alt="Love Birds" class="img-thumbnail" style="width:600px; height:600px;"/>
+          <button type="button" class="btn btn-primary"> Like </button>
+      </div>
+    </div>
   </div>
-</div>  
-</div>
+
 </body>
 </html>
