--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="col-6">
           <h1>Beluga</h1>
   
-          <img src="2.jpg" alt="Love Birds" class="img-thumbnail" style="width:600px; height:600px;"/>
+          <img src="3.jpg" alt="3" class="img-thumbnail" style="width:600px; height:600px;"/>
           <button type="button" class="btn btn-primary"> Like </button>
       </div>
     </div>
