--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Aljon Sarmiento</title>
+  <title>My Home Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
       <div class="col-6">
           <h1>Beluga</h1>
   
-          <img src="3.jpg" alt="3" class="img-thumbnail" style="width:600px; height:600px;"/>
+          <img src="3.jpg" alt="3" class="img-thumbnail" style="width:200px; height:200px;"/>
           <button type="button" class="btn btn-primary"> Like </button>
       </div>
     </div>
