--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div class="container">
 <div class="row">
   <div class="col-6">
+   <h1>Beluga</h1>
 <img src="2.jpg" class="thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary"> Like </button>
 
