--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
    <h1>Beluga</h1>
 <img src="2.jpg" class="thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary"> Like </button>
+<button type="button" class="btn btn btn-primary"> DisLike </button> 
 <img src="3.jpg" class="thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary"> Like </button>
+<button type="button" class=" btn btn-primary"> DisLike </button>
   </div>
 </div>
 </div>
