--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <img src="2.jpg" class="thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary"> Like </button>
 <button type="button" class="btn btn btn-primary"> DisLike </button>
+  </div>
+ <div class="col-6">
    <h1>Ador</h1>
 <img src="3.jpg" class="thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary"> Like </button>
