--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <div class="row">
   <div class="col-6">
    <h1>Beluga</h1>
-<img src="2.jpg" class="thumbnail" style="height:500px;width:500px;"/>
+<img src="2.jpg" class="img-thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary" id="btnLike1"> Like </button>
 <button type="button" class="btn btn btn-primary" id="btnDisLike1"> DisLike </button>
    <output id="count1">0</output>
   </div>
  <div class="col-6">
    <h1>Ador</h1>
-<img src="3.jpg" class="thumbnail" style="height:500px;width:500px;"/>
+<img src="3.jpg" class="img-thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary"> Like </button>
 <button type="button" class=" btn btn-primary"> DisLike </button>
   </div>
