--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
  <div class="col-6">
    <h1>Ador</h1>
 <img src="3.jpg" class="img-thumbnail" style="height:500px;width:500px;"/>
-<button type="button" class="btn btn-primary"> Like </button>
-<button type="button" class=" btn btn-primary"> DisLike </button>
+<button type="button" class="btn btn-primary" id="btnLike2"> Like </button>
+<button type="button" class=" btn btn-primary" id="DisLike"> DisLike </button>
+  <output id="count2">0</output>
   </div>
 </div>
 </div>
