--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <output id="count3">0</output>
   </div>
  <div class="col-6">
-   <h1>Ador</h1>
+   <h1>Bulaga</h1>
 <img src="3.jpg" class="img-thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary" id="btnLike2"> Like </button>
   <output id="count2">0</output>
