--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 <div class="container">
 <div class="row">
-  <div class="col-6">
+  <div class="col-4">
    <h1>Beluga</h1>
 <img src="2.jpg" class="img-thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary" id="btnLike1"> Like </button>
@@ -18,7 +18,7 @@
 <button type="button" class="btn btn btn-primary" id="btnDisLike3"> DisLike </button>
    <output id="count3">0</output>
   </div>
- <div class="col-6">
+ <div class="col-4">
    <h1>Bulaga</h1>
 <img src="3.jpg" class="img-thumbnail" style="height:500px;width:500px;"/>
 <button type="button" class="btn btn-primary" id="btnLike2"> Like </button>
@@ -26,6 +26,9 @@
 <button type="button" class=" btn btn-primary" id="btnDisLike4"> DisLike </button>
   <output id="count4">0</output>
   </div>
+ <div class="col-4">
+<textarea class="form-control" id="commentbox" row=12>  </textarea>
+ </div>
 </div>
 </div>
     
