--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
   <output id="count4">0</output>
   </div>
  <div class="col-4">
-<textarea class="form-control" id="commentbox" row=12>  </textarea>
+  <br>
+  <br>
+Comments  <br>
+<textarea class="form-control" id="commentbox" rows=12>  </textarea>
  </div>
 </div>
 </div>
