--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <output id="count4">0</output>
   </div>
  <div class="col-4">
-  <br>
-  <br>
-Comments  <br>
-<textarea class="form-control" id="commentbox" rows=12>  </textarea>
+<h1>Comments</h1>  <br>
+  <input type="text" class="from-control" id="comment/>
+   <button class="btn btn-success" id="submit">Submit</button>
+  <textarea class="form-control" id="commentbox" rows=12>  </textarea>
  </div>
 </div>
 </div>
