--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
  <div class="col-4">
 <h1>Comments</h1>  <br>
-  <input type="text" class="from-control" id="comment/>
+  <input type="text" class="from-control" id="comment"/>
    <button class="btn btn-success" id="submit">Submit</button>
   <textarea class="form-control" id="commentbox" rows=12>  </textarea>
  </div>
