--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 
 <html lang="en">
+    
 <head>
+    <title>Bornok</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
+</style>
 </head>
 <body>
  <div class="container">
@@ -20,27 +23,27 @@
         <div class="row">
             <div class="col-4 text-center">
                 <label id="product1">Drill</label><br>
-                <img src="drill.jpg" alt="" class="img-thumbnail" height="250px" width="250px">
+                <img src="drill.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
                 <br>
                 <label for="product1" id="price1">1500.00</label>
                 <br>
-                <input type="numder" class="form-control" id="qty1" placeholder="Enter Quantity"/>
+                <input type="number" class="form-control" id="qty1" placeholder="Enter Quantity"/>
             </div>
             <div class="col-4 text-center">
                 <label id="product2">Tape Measure</label>
-                <img src="tape measure.jpg" alt="" class="img-thumbnail" height="250px" width="250px">
+                <img src="tape measure.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
                 <br>
                 <label for="product2" id="price2">350.00</label>
                 <br>
-                <input type="numder" class="form-control" id="qty2" placeholder="Enter Quantity"/>
+                <input type="number" class="form-control" id="qty2" placeholder="Enter Quantity"/>
             </div>
             <div class="col-4 text-center">
                 <label id="product3">Saw</label><br>
-                <img src="saw.jpg" alt="" class="img-thumbnail" height="250px" width="250px">
+                <img src="saw.jpg" alt="" class="img-thumbnail" height="100%" width="110%">
                 <br>
                 <label for="product3" id="price3">500.00</label>
                 <br>
-                <input type="numder" class="form-control" id="qty3" placeholder="Enter Quantity"/>
+                <input type="number" class="form-control" id="qty3" placeholder="Enter Quantity"/>
             </div>
             </div>
             <div class="row"> 
@@ -52,7 +55,7 @@
                 <br>
                 <label for="product4" id="price4">450.00</label>
                 <br>
-                <input type="numder" class="form-control" id="qty4" placeholder="Enter Quantity"/>
+                <input type="number" class="form-control" id="qty4" placeholder="Enter Quantity"/>
             </div>
             <div class="col-4 text-center">
                 <br>
@@ -62,7 +65,7 @@
                 <br>
                 <label for="product5" id="price5">650.00</label>
                 <br>
-                <input type="numder" class="form-control" id="qty5" placeholder="Enter Quantity"/>
+                <input type="number" class="form-control" id="qty5" placeholder="Enter Quantity"/>
             </div>
             <div class="col-4 text-center">
                 <br>
@@ -72,15 +75,18 @@
                 <br>
                 <label for="product6" id="price6">900.00</label>
                 <br>
-                <input type="numder" class="form-control" id="qty6" placeholder="Enter Quantity">
+                <input type="number" class="form-control" id="qty6" placeholder="Enter Quantity">
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-4">
+            <br>
             <label for="carts">Orders</label>
             <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px; height: 400px;"></textarea>
             <input type="text" class="form-control border-0" id="total" readonly placeholder="Total">
             <input type="number" class="form-control" id="cash" placeholder="Cash Tender">
             <input type="text" class="form-control border-0" id="change" readonly placeholder="Change">
+            <br>
+            <button type="button" class="btn btn-primary" id="orderButton" >Order</button>
             <br>
 
         </div>
