--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-4 text-center">
                 <label id="product3">Saw</label><br>
-                <img src="saw.jpg" alt="" class="img-thumbnail" height="100%" width="110%">
+                <img src="saw.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
                 <br>
                 <label for="product3" id="price3">500.00</label>
                 <br>
@@ -51,7 +51,7 @@
                 <br>
                 <br>
                 <label id="product4">Pliers</label><br>
-                <img src="plier.jpg" alt="" class="img-thumbnail" height="250px" width="250px">
+                <img src="plier.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
                 <br>
                 <label for="product4" id="price4">450.00</label>
                 <br>
@@ -61,7 +61,7 @@
                 <br>
                 <br>
                 <label id="product5">SrewDriver</label><br>
-                <img src="screwdriver.png" alt="" class="img-thumbnail" height="250px" width="250px">
+                <img src="screwdriver.png" alt="" class="img-thumbnail" height="100%" width="100%">
                 <br>
                 <label for="product5" id="price5">650.00</label>
                 <br>
@@ -71,7 +71,7 @@
                 <br>
                 <br>
                 <label id="product6">Hammer</label><br>
-                <img src="hammer.jpg" alt="" class="img-thumbnail" height="250px" width="250px">
+                <img src="hammer.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
                 <br>
                 <label for="product6" id="price6">900.00</label>
                 <br>
