--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
     
 <head>
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
 </style>
 </head>
-<body>
+<body style="background-color: rgb(255, 187, 62);">
  <div class="container">
     <div class="row">
         <div class="col-12">
@@ -55,6 +55,8 @@
                 <br>
                 <label for="product4" id="price4">450.00</label>
                 <br>
+                <br>
+                <br>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter Quantity"/>
             </div>
             <div class="col-4 text-center">
@@ -81,12 +83,12 @@
         <div class="col-4">
             <br>
             <label for="carts">Orders</label>
-            <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px; height: 400px;"></textarea>
+            <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 355px; height: 400px;"></textarea>
             <input type="text" class="form-control border-0" id="total" readonly placeholder="Total">
             <input type="number" class="form-control" id="cash" placeholder="Cash Tender">
             <input type="text" class="form-control border-0" id="change" readonly placeholder="Change">
             <br>
-            <button type="button" class="btn btn-primary" id="orderButton" >Order</button>
+            <button type="button" class="btn btn-primary" id="orderButton" onclick="showPurchase" >Order</button>
             <br>
 
         </div>
