--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
-</style>
+<style>
+    .product-img{
+        height: 300px;
+        width: auto;
+    }
+</style> 
 </head>
 <body style="background-color: rgb(255, 187, 62);">
  <div class="container">
@@ -23,7 +28,7 @@
         <div class="row">
             <div class="col-4 text-center">
                 <label id="product1">Drill</label><br>
-                <img src="drill.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
+                <img src="drill.jpg" alt="" class="img-thumbnail product-img">
                 <br>
                 <label for="product1" id="price1">1500.00</label>
                 <br>
@@ -31,7 +36,7 @@
             </div>
             <div class="col-4 text-center">
                 <label id="product2">Tape Measure</label>
-                <img src="tape measure.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
+                <img src="tape measure.jpg" alt="" class="img-thumbnail product-img">
                 <br>
                 <label for="product2" id="price2">350.00</label>
                 <br>
@@ -39,7 +44,7 @@
             </div>
             <div class="col-4 text-center">
                 <label id="product3">Saw</label><br>
-                <img src="saw.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
+                <img src="saw.jpg" alt="" class="img-thumbnail product-img">
                 <br>
                 <label for="product3" id="price3">500.00</label>
                 <br>
@@ -51,7 +56,7 @@
                 <br>
                 <br>
                 <label id="product4">Pliers</label><br>
-                <img src="plier.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
+                <img src="plier.jpg" alt="" class="img-thumbnail product-img">
                 <br>
                 <label for="product4" id="price4">450.00</label>
                 <br>
@@ -63,7 +68,7 @@
                 <br>
                 <br>
                 <label id="product5">SrewDriver</label><br>
-                <img src="screwdriver.png" alt="" class="img-thumbnail" height="100%" width="100%">
+                <img src="screwdriver.png" alt="" class="img-thumbnail product-img">
                 <br>
                 <label for="product5" id="price5">650.00</label>
                 <br>
@@ -73,7 +78,7 @@
                 <br>
                 <br>
                 <label id="product6">Hammer</label><br>
-                <img src="hammer.jpg" alt="" class="img-thumbnail" height="100%" width="100%">
+                <img src="hammer.jpg" alt="" class="img-thumbnail product-img">
                 <br>
                 <label for="product6" id="price6">900.00</label>
                 <br>
