--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         height: 300px;
         width: auto;
     }
+  .logo{
+    height: 100px;
+    border: 1px solid black;
+    border-radius: 30px;
+}
 </style> 
 </head>
 <body style="background-color: rgb(255, 187, 62);">
@@ -22,7 +27,9 @@
             <h6>Ador Macaraeg II
                 BSIT 3C
             </h6>
-            <center><h2>Bornok's Hardware Store</h2></center>
+            <center><h2>Bornok's</h2>
+            <!--<img src="hardware.png" alt="" class="logo">-->
+            </center>
             <hr class="hr"/> 
         </div>
         <div class="row">
