--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 BSIT 3C
             </h6>
             <center><h2>Bornok's</h2>
-            <!--<img src="hardware.png" alt="" class="logo">-->
+            <img src="hardware.png" alt="" class="logo">
             </center>
             <hr class="hr"/> 
         </div>
